# scappit

./: CMakeLists.txt  CNAME  LICENSE  README.md  icons.qrc  index.html  scappit.cpp
