cmake_minimum_required(VERSION 2.8)
project(scappit)
add_definitions(-std=c++11 -O2 -Wall -Werror)
find_package(Qt5Widgets REQUIRED)
find_package(Qt5X11Extras REQUIRED)
set(CMAKE_AUTOMOC TRUE)
qt5_add_resources(RES icons.qrc)
add_executable(scappit scappit.cpp ${RES})
qt5_use_modules(scappit Widgets X11Extras)
target_link_libraries(scappit X11)
